--- a/style1.css
+++ b/style1.css
@@ -9,14 +9,29 @@
     margin-bottom:10px;   
 }
 
-#nav-div{
-    width:100%;
-    min-height:30px;
-    background-color:#0e1b45;
-    line-height:30px;    
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
     text-align: center;
-    margin-bottom:10px;
-}
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #5617e7;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #d563ec;
+    color: white;
+  }
 
 #headerbanner-div{
     width:100%;
@@ -35,9 +50,6 @@
 
 #sidebar-div{
     width:20%;
-    padding-top: 100px;
-    min-height:400px;
-    background-color:#0e1b45;
     float:left;
     text-align:center;
     line-height:40px;
